examples/invalid/50_double_literal_missing_fraction_digits.lane
module Examples.Invalid.DoubleLiteralMissingFractionDigits

pub let bad : Double = 1.

